# NIC-Quake

./: .gitignore  HARDWARE.md  LICENSE  LICENSE-HW  README.md  README_cs.md  README_ru.md  SOFTWARE.md
firmware/: CMakeLists.txt  DATAFLOW.md  DESIGN.md  FIRMWARE.md  README.md
firmware/core/: CMakeLists.txt  DESIGN.md  HARDWARE.md  README.md
firmware/core/blocks/: bus-485-clock.md  bus-modbus.md  datalogger.md  gps-pps.md  protection-485.md  protection-power.md
firmware/core/lib/nic-clocksync/include/: nic_clocksync.h
firmware/core/lib/nic-clocksync/src/: nic_clocksync.c
firmware/core/lib/nic-common/include/: nic_crc.h  nic_math.h  nic_proto.h  nic_spi.h  nic_types.h
firmware/core/lib/nic-link/include/: nic_link.h
firmware/core/lib/nic-link/src/: nic_link.c
firmware/core/lib/nic-lora/include/: nic_lora.h
firmware/core/lib/nic-lora/src/: nic_lora.c
firmware/core/lib/nic-master/include/: nic_master.h
firmware/core/lib/nic-master/src/: nic_master.c
firmware/core/lib/nic-node/include/: nic_node.h
firmware/core/lib/nic-node/src/: nic_node.c
firmware/core/lib/nic-timesync/include/: nic_timesync.h
firmware/core/lib/nic-timesync/src/: nic_timesync.c
firmware/core/lib/nic-uplink/include/: nic_uplink.h
firmware/core/lib/nic-uplink/src/: nic_uplink.c
firmware/core/test/: test_clocksync.c  test_link.c  test_lora.c  test_master.c  test_node.c  test_timesync.c  test_uplink.c
firmware/lib/nq-adxl355/include/: nq_adxl355.h
firmware/lib/nq-adxl355/src/: nq_adxl355.c
firmware/lib/nq-cal/include/: nq_cal.h
firmware/lib/nq-cal/src/: nq_cal.c
firmware/lib/nq-detect/include/: nq_detect.h
firmware/lib/nq-detect/src/: nq_detect.c
firmware/lib/nq-icm42688/include/: nq_icm42688.h
firmware/lib/nq-icm42688/src/: nq_icm42688.c
firmware/lib/nq-scl3300/include/: nq_scl3300.h
firmware/lib/nq-scl3300/src/: nq_scl3300.c
firmware/lib/nq-sensors/include/: nq_sensors.h
firmware/lib/nq-sensors/src/: nq_sensors.c
firmware/master/: README.md  board_master.c  board_master.h  main_app.c
firmware/node/: CUBEMX.md  board.c  board.h  main_app.c
firmware/test/: test_cal.c  test_detect.c  test_drivers.c  test_scl3300.c  test_sensors.c
